# orgmirror

./: .cursorrules  .gitignore  README.md  pyproject.toml
examples/: demo_task.py
orgmirror/: __init__.py  cli.py
orgmirror/agents/: base_agent.py  executor.py  manager.py  reviewer.py  router.py
orgmirror/core/: analyzer.py  llm_backend.py  metrics.py  orchestrator.py  reporter.py
orgmirror/orgs/: alibaba.py  base.py  bytedance.py  huawei.py  tencent.py
tests/: test_e2e_mock.py
