[project]
name = "orgmirror"
version = "0.1.0"
description = "重生之我在大厂当高管 — AI Multi-Agent 组织效率照妖镜"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
orgmirror = "orgmirror.cli:main"
